# funnel-tracking

./: .gitignore  CLAUDE.md  GEMINI.md  README-vi.md  README.md  bubbles.json  dom_structure.txt  dump_bubbles.py  inspect_dom.py  inspect_thread.py  pyproject.toml  test_eval.py  test_hung_bui.py  tmp_dom_results.json  tmp_dom_results_full.json
.claude/: agents  log-session.sh  settings.json
adk_agents/: __init__.py  agent.py  inbox_mas.evalset.json
docs/: ARCHITECTURE.md  architecture-decisions.md
logs/: handover_report_2026_03_08.md  iteration_handover_hitl_mas.md
memory/: SOUL.md  debug_alignment.json  debug_first_thread.json  debug_pureeye_art.json  mas_strategy.md  research.md
tests/: e2e_fetch_comments.py  e2e_hung_bui_report.json  hungbui_test_output.json  qa_dual_verification_report.json  test_adk_e2e.py  test_adk_wiring.py  test_async_inbox_hitl.py  test_classify_city.py  test_cool_sequence.py  test_dedup_users.py  test_e2e_existing_data.py  test_e2e_full_pipeline.py  test_e2e_live_hung_bui.py  test_e2e_mas_strategy_hung_bui.py  test_facebook_tools.py  test_fb_browser_bootstrap.py  test_fetch_comments.py  test_fetch_fb_messages.py  test_inbox_hitl_mock_e2e.py  test_interest_targeting.py  test_l1_comment_helpers.py  test_l1_inbox_contracts.py  test_l2_inbox_draft_safety.py  test_l3_comment_pipeline.py  test_l3_inbox_pipeline.py  test_l4_comment_persistence.py  test_l4_import_boundaries.py  test_l4_inbox_persistence.py  test_l5_comment_query_actions.py  test_l5_event_tools.py  test_l5_facebook_tools.py  test_l5_fetch_comments.py  test_l5_module_exports.py  (+13 more)
(+153 files in other folders)
