[project]
name = "funnel-tracking"
version = "0.1.0"
description = "Multi-Agent System for Sahaja Yoga Vietnam funnel tracking — CDP-based Facebook inbox automation with ADK agents."
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "google-adk>=1.0.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
